--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "daisyui": "^2.51.6",
     "firebase": "^9.21.0",
+    "formik": "^2.2.9",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
@@ -19,7 +20,8 @@
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.11.0",
     "sort-by": "^1.2.0",
-    "swiper": "^9.2.4"
+    "swiper": "^9.2.4",
+    "yup": "^1.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
